src/test/deca/context/invalid/sansObjet/BadNullUsage.deca
{
    int a = 100;
    int b = 100;
    if (b > null){
        print("b est supérieur a null");
    }
}
